edge/default-404/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-404
  namespace: edge
spec:
  type: ClusterIP
  selector:
    app: default-404
  ports:
    - name: http
      port: 80
      targetPort: 8080
